turtleart.lessons.turtleart.Main.Triangle.scala.error
Source:6: error: not found: value droiet
	droiet(120)
        ^