turtleart.lessons.turtleart.Main.Triangle.scala.code
override def run() {

for(i <- 0 to 2){
	avance(200)
	droiet(120)
}

}
